finished the draft version

--- a/index.html
+++ b/index.html
@@ -5,17 +5,30 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript"></script>
     <script src="./jquery-3.3.1.min.js" type="text/javascript"></script>
     <script src="./priceCalc.js" type="text/javascript"></script>
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
     <script type="text/javascript">
         function Pageload() {
-
+            var pcTest = new priceCalc('pcTest');
+            pcTest.init();
+            var itm1 = new pcItem(1, 'Pencil', 6, 3.3);
+            var itm2 = new pcItem(2, 'Pen', 2, 6.7);
+            var itm3 = new pcItem(3, '橡皮擦', 3.5, 2);
+            pcTest.additm(itm1); pcTest.additm(itm2); pcTest.additm(itm3);
+            pcTest.removeitm(-1);
+            pcTest.refresh();
         };
         $(document).ready(Pageload);
     </script>
 </head>
-<body>
-<div id="pcTest">
 
-</div>
+<body>
+    <div id="pcTest" class="p-3">
+
+    </div>
 </body>
+
 </html>
